
= ruote-sequel - CHANGELOG.txt


== ruote-sequel 2.2.0    released 2011/03/01

- initial release
